--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,7 @@
               {
                 "input": "node_modules/@angular/material/prebuilt-themes/indigo-pink.css"
               },
-              "src/styles.css"
+              "src/styles/global.scss"
             ],
             "scripts": []
           },
@@ -129,5 +129,10 @@
       }
     }
   },
-  "defaultProject": "site"
+  "defaultProject": "site",
+  "schematics": {
+    "@schematics/angular:component": {
+      "styleext": "scss"
+    }
+  }
 }
